Converted .h to .hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(GEN_CPP_Refactoring)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(GEN_CPP_Refactoring main.cpp
-        Movie.cpp Customer.cpp Rental.h MovieState.hpp MovieStateRelease.hpp MovieStateChildren.hpp MovieStateRegular.hpp)
+        Customer.cpp Rental.hpp MovieState.hpp MovieStateRelease.hpp MovieStateChildren.hpp MovieStateRegular.hpp)
 
 if (CMAKE_VERSION VERSION_LESS 3.2)
     set(UPDATE_DISCONNECTED_IF_AVAILABLE "")
@@ -34,6 +34,6 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
 endif()
 
 add_executable(AllTests tests/CustomerTest.cpp tests/RentalTest.cpp
-        Customer.cpp Movie.cpp Rental.h)
+        Customer.cpp Rental.hpp)
 target_link_libraries(AllTests gtest gmock_main)
 add_test(NAME All_Tests COMMAND AllTests)
